feat: eventi di una associazione
